fix margin icons in menu and fix tabs primary (Header) width when is collapsed

--- a/src/themes/default/styles/component.layout.css
+++ b/src/themes/default/styles/component.layout.css
@@ -80,6 +80,9 @@ $header-height: 72px;
                 left: $aside-sml-width;
             }
 
+            & .layout__header {
+                left: $aside-sml-width;
+            }
         }
 
         @media (--screen-from-sml) {
